Changed header to display admin site links for logged in users. Changed some colours and added comments.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 h1 {
-    color: #132D8F;
+    color: #660066;
 }
 
 td a {
@@ -15,7 +15,8 @@ body {
 }
 
 .bg-custom {
-    background-color: #132D8F;
+    background-color: #660066;
+;
 }
 
 html,
